--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <meta name="description" content="Educational Design Studios: A site where Teachers Share Resources in Algebra, Precalculus, Calculus, Statistics, Physics, Chemistry, Biology, World History, U.S. History, Middle School Science, and More!">
+    <meta name="description" content="Story Time">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Content-Location" content="home.html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
