Cleaned up stuff

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
 
     <%= yield :head %>
 
-    <title><%= yield(:title) || params[:controller].capitalize %> | Educational Design Studios</title>
+    <title><%= yield(:title) || params[:controller].capitalize %> | Story Time</title>
   </head>
   
   <body data-page="<%= @page = @address %>">
