Cleaned up stuff

--- a/app/views/user/show_signup.html.erb
+++ b/app/views/user/show_signup.html.erb
@@ -1,6 +1,6 @@
 
 <div class="panel panel-info">
-	<div class="panel-heading">Join Educational Design Studios</div>
+	<div class="panel-heading">Join Story Time</div>
 	<div class="panel-body">
 		<%= form_tag( "/user/signup", id: 'signupForm',  method: 'post', :"parsley-validate" => true, novalidate: true) do %>
 		<%= alert_snippet %>
@@ -99,10 +99,6 @@
 			<div class="col-lg-2 col-md-1"><!-- Nothing --></div>
 		</div>
 		<br/>
-		<div class="panel panel-success">
-			<div class="panel-heading">Join Us</div>
-			<div class="panel-body">By signing up before June 30, 2014 you will be recognized as a <i>Pioneer Teacher</i> on our web page. After June 30, 2014 we will have an annual subscription cost established. Until then, all services on the site will be free to use.</div>
-		</div>
 		<hr/>
 		<div class="row">
 			<div class="col-md-1"><!-- Nothing --></div>
