--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  Welcome to Educational Design Studios!
+  Welcome to Story Time!
 <% end %>
 
 <h1>Welcome <small>You are now a registered user</small></h1>
