--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -1,3 +1,3 @@
-<h2>Welcome to Educational Design Studios!</h2>
+<h2>Welcome to Story Time!</h2>
 <p>We thank you for joining and hope you will enjoy the services we provide.</p>
 <p><a href="<%= host %>/user/confirm_email/<%= @user.token %>/<%= @user.emails[0].name %>">Click here</a> to confirm your account.</p>
