Cleaned up stuff

--- a/app/views/public/contact.html.erb
+++ b/app/views/public/contact.html.erb
@@ -8,7 +8,7 @@
     <div class="panel-body">
       <p>If you got a <abbr title="In other words, a problem.">beef</abbr>, let us know. Seriously, contact us if you think we can improve the site or you have an issue with our service. We will get back to you ASAP.</p>
       <address itemscope itemtype="http://schema.org/Organization">
-      <strong itemprop="name">Educational Design Studios</strong><br>
+      <strong itemprop="name">Story Time</strong><br>
       <strong itemprop="legalName">EDesign Studios, LLC</strong><br>
       <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
         <span itemprop="streetAddress">719 S. Saint Marys Street</span><br>
