Changed brand title to Story Time!

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       <div class="navbar-header" style="padding-right: 10px">
-        <a class="navbar-brand" href="<%= home_url %>">EDesignStudios</a>
+        <a class="navbar-brand" href="<%= home_url %>">Story Time!</a>
       </div>
       <div class="collapse navbar-collapse navbar-ex1-collapse navbar-responsive-collapse" style="overflow-x: hidden;">
         <ul class="nav navbar-nav navbar-left">
