Cleaned up some simple stuff

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -14,17 +14,6 @@
       </ul>
       <ul class="list-unstyled">
         <li class="">
-          <a href="/uploads/browse/physics" data-title="Physics Resources" data-pageid="" data-url="physics-resources-1.html">Physics Resources</a>
-        </li>
-        <li class="">
-          <a href="/uploads/browse/chemistry" data-title="Math Resources" data-pageid="" data-url="math-resources.html">Math Resources</a>
-        </li>
-        <li class="">
-          <a href="/uploads/browse/chemistry" data-title="Chemistry Resources" data-pageid="" data-url="chemistry-resources.html">Chemistry Resources</a>
-        </li>
-      </ul>
-      <ul class="list-unstyled">
-        <li class="">
           <a href="/contact">Contact</a>
         </li>
         <li class="">
@@ -46,7 +35,7 @@
       <h6>TOLL FREE: <span itemprop="telephone">(210)201-6760</span></h6>
     </div>
     <div class="seperator">
-      <h6>EDesign Studios, LLC © 2011 | Privacy Policy</h6>
+      <h6>Story Time, LLC © 2011 | Privacy Policy</h6>
     </div>
     <div class="seperator">
       <a href="http://luukvanbaars.com/"><small>Background Credits to Luuk van Barrs</small></a>
