--- a/app/views/user/welcome.html.erb
+++ b/app/views/user/welcome.html.erb
@@ -11,17 +11,17 @@
     <div class="panel-body">
       <ol>
         <li></li>
-        <li><a href="#upgrade">Upgrade!</a> To share, explore, and rate resources from all over!</li>
+        <li></li>
       </ol>
     </div>
   </div>
   <div class="panel panel-primary" id="upgrade">
-    <div class="panel-heading"><h2>Upgrading</h2></div>
+    <div class="panel-heading"><h2>Starting a Group</h2></div>
     <div class="panel-body">
-      <p class="lead">You can upgrade at <b>any time!</b></p>
+      <p class="lead"></p>
       
       <div class="col-md-8">
-        <p class="lead">Quality Resources</p>
+        <p class="lead">SubHeading 1</p>
         <p></p>
       </div>
       <div class="col-md-4">
@@ -31,12 +31,12 @@
         <%= image_tag 'teachers.png', class: 'img-responsive' %>
       </div>
       <div class="col-md-4">
-        <p class="lead">Made By Teachers for Teachers</p>
+        <p class="lead">SubHeading 2</p>
         <p></p>
         
       </div>
       <div class="col-md-8">
-        <p class="lead">Helping Change Classrooms</p>
+        <p class="lead">SubHeading 3</p>
         <p></p>
       </div>
       <div class="col-md-4">
@@ -46,18 +46,9 @@
         <%= image_tag 'support.png', class: 'img-responsive' %>
       </div>
       <div class="col-md-4">
-        <p class="lead">Support</p>
+        <p class="lead">SubHeading 4</p>
         <p></p>
       </div>
-    </div>
-  </div>
-<% elsif @user.type == BetaMember %>
-  <div class="panel panel-info">
-    <div class="panel-heading"><h2>Next Steps...</h2></div>
-    <div class="panel-body">
-      <ol>
-        <li>Check your email for a confirmation link.</li>
-      </ol>
     </div>
   </div>
 <% end %>
