--- a/app/assets/stylesheets/bootstrap-united.css
+++ b/app/assets/stylesheets/bootstrap-united.css
@@ -4699,8 +4699,8 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-default {
-  background-color: #dd4814;
-  border-color: #bf3e11;
+  background-color: #000;
+  border-color: #000;
 }
 
 .navbar-default .navbar-brand {
