--- a/app/views/public/about.html.erb
+++ b/app/views/public/about.html.erb
@@ -3,21 +3,12 @@
 <% end %>
 
 <div class="well">
-	<p class="lead arial">What We Do</p>
-	<p class="serif">Dear Educational Professional:</p>
-	<p class="serif">Thanks for visiting our website. At EDesign Studios, LLC, we will provide you with quality, reviewed, and <i>Lesson Study</i> protocoled instructional materials.</p>
-	<p class="serif">Upon your registration with us, you will have access to a library of instructional materials  that is continually growing. When you upload materials, other professionals can use these submissions to assist them in their classrooms.  In return, you get access to THEIR materials, and we will review the submissions so that you will be provided with the quality materials that you want. For example, all of our skillsheets have fully solved answer keys, and all of our Powerpoints® are interactive.  Educators across the country have told us “This is exactly what we have been waiting for!”</p>
-	<p class="serif">So, thanks for enrolling, and let us know what you think.  With your input, this service will only get better and better.</p>
-	<p class="serif">Sincerely,</p>
-	<p class="serif">EDesign Studios, LLC</p>
-</div>
-<div class="well">
-	<p class="lead">Who We Are</p>
-	<div class="row">
-	  <div class="col-md-2">
-  		<%= image_tag "pictures/owner.jpg", class: "img-responsive" %>
-  		<small><b>Alan Gnospelius</b></small>  	
-	  </div>
-	  <div style="" class="serif col-md-10">I've taught science for over 20 years and I hold a Masters Degree from Boston University in Instructional Design. <i>Teaching is a hard profession.</i> Like you, I have found less and less time in my day to develop quality educational materials. At EDesignStudios, LLC I have formed a network of caring teachers who are comfortable with sharing their materials. I can assure you that you will find a professional community of educators who want to improve their day-to-day classroom instruction. You will find a compendium of proven resources that I hope will fit your needs. So sign up, (the first six months are free), submit ten materials and enjoy our library!</div>
-	</div>
+    <h2 style="text-align: center;">Say goodbye to writers block!</h2>
+	<p class="lead arial">What is this?</p>
+	<p class="serif">This website is for tandem story writing. Tandem stroy writing is a form of creative writing where you write part of a story and then pass the story off to another person where they can veer your story way off track or form to the intended plot.</p>
+	<p class="serif">This website is for people who enjoy creating new things in a fun and interactive environment.</p>
+	<p class="serif">Through this website you can collaborate with friends in order to create a groovy new story.</p>
+	<p class="serif">If you get stuck, or you are issued a challenge, you will be given a phrase or word that will have to be included, this gives a little bit of help to those of us more prone to writers block.</p>
+	<p class="serif">Happy writing Sincerely,</p>
+	<p class="serif">The Story Time team</p>
 </div>
