--- a/app/views/public/plans.html.erb
+++ b/app/views/public/plans.html.erb
@@ -6,10 +6,12 @@
   <div class="panel-heading">How It Works</div>
   <div class="panel-body">
     <div class="col-md-6 col-sm-5">
-      <p>Master teachers supplement with quality instructional materials. <!-- If you're a teacher who uses a lot of supplemental materials for instruction, EDesignStudios LLC ©, is a resource that can help you. --> Here's how to get started:</p>
+      <p>This website is for writing tandem story</p>
+        <p>Here are some rules!</p>
       <ol class="">
         <li>
-          If you join us before September 30, 2014 you will recognized as a <i>Pioneer Teacher</i> of our service.
+          No being a weirdo!
+            That means no 
         </li>
         <li>
           Begin uploading materials. Once you upload a minimum of <b>ten</b> items you will receive a discount the next time you are billed. Remember, your submissions have to be approved before they count as one of the ten. Chances are they will be approved.
