--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,14 +25,14 @@
           </li>
           <%- end %>
      
-          <%= form_tag '/uploads/search', class: "navbar-form navbar-left nav-group top-search", style: "margin-left: 0px;", method: 'get' do %>
+          <!--<%= form_tag '/uploads/search', class: "navbar-form navbar-left nav-group top-search", style: "margin-left: 0px;", method: 'get' do %>
             <div class="form-group">
               <%= text_field_tag :query, '', class: "form-control col-2", placeholder: "Search Stories..." %>
             </div>
             <button type="submit" id="commit" class="btn btn-mini btn-warning">
               <b class="glyphicon glyphicon-search"></b>
             </button>
-          <%- end %>
+          <%- end %>-->
         </ul> <!-- END LEFT NAV -->
 
         <ul class="nav navbar-nav navbar-right img-responsive" >
