--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -1,37 +1,3 @@
-<%# Home Page #%>
-
-<% content_for :title do %>
-  Home
-<% end %>
-
-<div class="panel panel-default">
-  <div class="panel-body">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="7000" style="height: 500px;">
-      <ol class="carousel-indicators">
-        <!-- <div id="carousel-indicator-bck"></div> -->
-        <li class="" data-slide-to="0" data-target="#myCarousel"></li>
-        <li class="active" data-slide-to="1" data-target="#myCarousel"></li>
-        <li class="" data-slide-to="2" data-target="#myCarousel"></li>
-      </ol>
-      <div class="carousel-inner" style="height: 500px;">
-        <div class="item" style=" height: 500px;">
-          <div class="carousel-caption carousel-caption-bck">
-            
-          </div>
-        </div>
-        <div class="item active" style="height: 500px;">
-          <div class="carousel-caption carousel-caption-bck">
-            
-          </div>
-        </div>
-        <div class="item" style="height: 500px;">
-          <div class="carousel-caption carousel-caption-bck">
-            
-          </div>
-        </div>
-      </div>
-      <a class="left carousel-control" data-slide="prev" href="#myCarousel"><span class="glyphicon glyphicon-chevron-left"></span></a>
-      <a class="right carousel-control" data-slide="next" href="#myCarousel"><span class="glyphicon glyphicon-chevron-right"></span></a>
-    </div>
-  </div>
+<div class="row">
+  <div class="col-md-12">.col-md-12</div>
 </div>
