--- a/app/assets/stylesheets/bootstrap-united.css
+++ b/app/assets/stylesheets/bootstrap-united.css
@@ -2112,6 +2112,8 @@ textarea.input-lg {
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
+  margin-left: auto;
+  margin-right: auto;
   cursor: pointer;
   border: 1px solid transparent;
   border-radius: 4px;
