--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -3,7 +3,7 @@
 <p style="text-align:center"><%= @group.description %></p>
 
 
-<h2 style="text-align: center"><%= link_to "New story", "/stories/new", class: "center btn-primary" %></h2>
+<h2 style="text-align: center"><%= link_to "New story", "/groups/#{@group.id}/stories/new", class: "center btn-primary" %></h2>
 <!-- Hey add a button here!
 
 for new stories-->
