--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -1,7 +1,6 @@
-<%#  %>
 
 <% if @user.groups.include? @group %>
-  <%= form_tag "/story/#{@story.id}/", id: 'story_scene',  method: 'post', :"parsley-validate" => true, novalidate: true) do %>
+  <%= form_tag "/story/#{@story.id}/", id: 'story_scene',  method: 'post', :"parsley-validate" => true, novalidate: true do %>
     <textarea x-webkit-speech speech></textarea>
   <% end %>
 <% end %>
