--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -8,5 +8,16 @@
     <textarea name="description" id="description" x-webkit-speech speech></textarea>
   </div>
 
+  <h3>Rules</h3>
+  <div class="row">
+    <%= label_tag :description %>
+    <%= text_field_tag :name, class: "", :"x-webkit-speech" => true, :"speech" => true %>
+  </div>
+
+  <div class="row">
+    <%= label_tag :description %>
+    <%= text_field_tag :name, class: "", :"x-webkit-speech" => true, :"speech" => true %>
+  </div>
+
   <%= submit_tag "Story Time!" %>
 <% end %>
