--- a/app/views/public/index.html.erb
+++ b/app/views/public/index.html.erb
@@ -1,3 +1,120 @@
 <div class="row">
-  <div class="col-md-12">.col-md-12</div>
+  <div class="col-md-12">
+    <% content_for :title do %>
+      About Us
+    <% end %>
+
+    <div class="well">
+        <h2 style="text-align: center;">Say goodbye to writers block!</h2>
+        <p class="lead arial">What is this?</p>
+        <p class="serif">This website is for tandem story writing. Tandem stroy writing is a form of creative writing where you write part of a story and then pass the story off to another person where they can veer your story way off track or form to the intended plot.</p>
+        <p class="serif">This website is for people who enjoy creating new things in a fun and interactive environment.</p>
+        <p class="serif">Through this website you can collaborate with friends in order to create a groovy new story.</p>
+        <p class="serif">If you get stuck, or you are issued a challenge, you will be given a phrase or word that will have to be included, this gives a little bit of help to those of us more prone to writers block.</p>
+        <p class="serif">Happy writing Sincerely,</p>
+        <p class="serif">The Story Time team</p>
+    </div>
+  </div>
+  <div class="col-md-12">
+<% content_for :title do %>
+  Plans
+<% end %>
+
+<div class="panel panel-default">
+  <div class="panel-heading">How It Works</div>
+  <div class="panel-body">
+    <div class="col-md-6">
+      <p>This website is for writing tandem story</p>
+        <p>Here are some rules!</p>
+      <ol class="">
+        <li>
+          No being a weirdo!
+            That means no 
+        </li>
+        <li>
+          Begin uploading materials. Once you upload a minimum of <b>ten</b> items you will receive a discount the next time you are billed. Remember, your submissions have to be approved before they count as one of the ten. Chances are they will be approved.
+        </li>
+        <li>
+          Download approved materials materials to your heart's content.
+        </li>
+        <li class="inline-block">
+          Share with other professionals!
+        </li>
+        <a href="/user/signup" class="btn btn-md btn-success pull-right inline-block">Join Us!</a>
+      </ol>
+    </div>
+  </div>
+</div>
+
+<%#
+  <div class="left col-lg-2">
+    <ul>
+      <li>Previewing Materials</li>
+      <li>Downloads?</li>
+      <li></li>
+      <li>Uploads?</li>
+      <li>Reviews and Feedback</li>
+      <li>Storage:
+        <ul>
+          <li>Public Storage</li>
+          <li>Private Storage</li>
+        </ul>
+      </li>
+      <li></li>
+      <li>Cost:
+        <ul>
+          <li>Monthly</li>
+          OR
+          <li>Yearly</li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+  <div class="col-lg-1"></div>
+  <div class="left col-lg-4">
+    <h2>Member</h2>
+    <ul>
+      <li>Yes</li>
+      <li>Yes</li>
+      <li></li>
+      <li>Yes</li>
+      <li>
+        <ul>
+          <li>2,048MB</li>
+          <li>1,024MB</li>
+        </ul>
+      </li>
+      <li></li>
+      <li>
+        <ul>
+          <li>$5.00</li>
+          <li>$30.00</li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+  <div class="col-lg-1"></div>
+  <div class="right col-lg-4">
+    <h2>Free</h2>
+    <ul>
+      <li>Yes</li>
+      <li>No</li>
+      <li></li>
+      <li>No</li>
+      <li>
+        <ul>
+          <li>50MB</li>
+          <li>0MB</li>
+        </ul>
+      </li>
+      <li></li>
+      <li>
+        <ul>
+          <li>$0.00</li>
+          <li>$0.00</li>
+        </ul>
+      </li>
+    </ul>
+  </div>%>
+  </div>
 </div>
