--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -9,7 +9,7 @@
 
 <% if @user.groups.include? @group %>
   <%= form_tag "/groups/#{ @group.id }/stories/#{ @story.id }", id: 'story_scene',  method: 'post', :"parsley-validate" => true, novalidate: true do %>
-    <textarea name="body" id="body" x-webkit-speech speech required="true" parsley-trigger="change" parsley-validation-minlength="<%= @rules.min_chars %>" parsley-maxlength="<%= @rules.max_chars %>"></textarea>
+    <textarea name="body" id="body" parsley-trigger="change" parsley-validation-minlength="<%= @rules.min_chars %>" parsley-maxlength="<%= @rules.max_chars %>"></textarea>
     <%= submit_tag "Post Scene!" %>
   <% end %>
 <% end %>
