Look at all of this progress

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -54,6 +54,8 @@
               <li><%= link_to "Admin Home", "/admin" %></li>
               <% end %>
               <li><%= link_to "Profile", "/user/profile#profile" %></li>
+              <li><%= link_to "Groups", "/user/profile#groups" %></li>
+              <li><%= link_to "Stories", "/user/profile#stories" %></li>
             </ul>
           </li>
           <li class="btn-mini btn-info">
