--- a/app/views/user/profile.html.erb
+++ b/app/views/user/profile.html.erb
@@ -16,9 +16,11 @@
   <li data-tab="stories" class="tab">
     <a href="#stories">Stories <span class="badge"><%= @user.story_scenes.story.count%></span></a>
   </li>
+  <!--
   <li data-tab="activity" class="tab">
     <a href="#activity">Activity</a>
   </li>
+-->
   <li data-tab="messages" class="tab">
     <a href="#messages">Messages <span class="badge">0</span></a>
   </li>
@@ -105,7 +107,7 @@
         
      </ul>
   </li>
-  <li data-tab="activity">
+  <!--<li data-tab="activity">
     <h1>Activity</h1>
     <hr/>
   </li>
@@ -113,7 +115,7 @@
     <h1>Messages</h1>
     <hr/>
   </li>
-
+-->
   <li data-tab="groups">
     <h1>Groups &ensp; <button class="btn"><%= link_to "New Group", "/groups/new" %></button></h1>
       
