Changed to list-unstyled

--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -3,7 +3,7 @@
   <li>You must enter between <%= @rules.min_words %> and <%= @rules.max_chars %></li>
 </ul>
 
-<ul class="list_unstyled">
+<ul class="list-unstyled">
 <% @story.story_scenes.each do |scene| %>
   <li>
     <%= scene.body %>
