Changed the Home page text to make sense

--- a/app/views/public/about.html.erb
+++ b/app/views/public/about.html.erb
@@ -3,12 +3,13 @@
 <% end %>
 
 <div class="well">
-    <h2 style="text-align: center;">Say goodbye to writers block!</h2>
+    <h2 style="text-align: center;">Say Goodbye to Writer's Block!</h2>
 	<p class="lead arial">What is this?</p>
-	<p class="serif">This website is for tandem story writing. Tandem stroy writing is a form of creative writing where you write part of a story and then pass the story off to another person where they can veer your story way off track or form to the intended plot.</p>
+	<p class="serif">This website is for Tandem Story writing combined with "Story Cubes". Tandem stroy writing is a form of creative writing where you write part of a story and then pass the story off to another person where they can veer your story way off track or form to the intended plot. Story Cubes adds a visual element to the creation of the story, forcing you to use your imagination.</p>
 	<p class="serif">This website is for people who enjoy creating new things in a fun and interactive environment.</p>
 	<p class="serif">Through this website you can collaborate with friends in order to create a groovy new story.</p>
-	<p class="serif">If you get stuck, or you are issued a challenge, you will be given a phrase or word that will have to be included, this gives a little bit of help to those of us more prone to writers block.</p>
-	<p class="serif">Happy writing Sincerely,</p>
+	<p class="serif">If you get stuck, or you are issued a challenge, you will be given a phrase, word, or image that will have to be included, this gives a little bit of help to those of us more prone to writers block.</p>
+	<p class="serif">Happy writing!</p> 
+    <p class="serif">Sincerely,</p>
 	<p class="serif">The Story Time team</p>
 </div>
