--- a/app/views/public/plans.html.erb
+++ b/app/views/public/plans.html.erb
@@ -10,14 +10,16 @@
         <p>Here are some rules!</p>
       <ol class="">
         <li>
-          No being a weirdo!
-            That means no 
+          Don't write anything offensive towards the other author! Be respectful to your fellow friends and writers.
         </li>
         <li>
-          Begin uploading materials. Once you upload a minimum of <b>ten</b> items you will receive a discount the next time you are billed. Remember, your submissions have to be approved before they count as one of the ten. Chances are they will be approved.
+          Don't write anything that would hurt minor's eyes or minds.
         </li>
         <li>
-          Download approved materials materials to your heart's content.
+          No hacking the website to change up the story and such.
+        </li>
+        <li>
+          No writing ONLY the keywords in your part of the paragraph. Use the web app for what it's made for and incorporate your requirements creatively in the challenges!
         </li>
         <li class="inline-block">
           Share with other professionals!
